TFP-5621: Flytter kontrakt til fp-kontrakter + forenkling av fpsak te… (#1748)